fixed z-index

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,6 +26,7 @@ ul.navbar-main {
   overflow: hidden;
   background-color: transparent;
 
+  z-index: 1;
   position: fixed;
   top: 0;
   width: 100%;
@@ -65,7 +66,7 @@ ul.navbar-main .dropdown-content {
   padding-bottom: 5px;
   border-radius: 5px;
 
-  background-color: white;
+  background-color: #5577EE;
   min-width: 91.75px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
